--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,24 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <jedis.version>2.9.0</jedis.version>
     </properties>
 
     <dependencies>
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+
+        <!--jedis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
+        </dependency>
+
         <!-- JPA配置 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
