--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
     view:
       prefix: /WEB-INF/
       suffix: .jsp
-#  data:
-#    redis:
-#      repositories:
-#        enabled: false
+  data:
+    redis:
+      repositories:
+        enabled: false
 
 # === JPA配置 ====
   jpa:
@@ -23,6 +23,26 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: true
+#=== Redis配置 ====
+  redis:
+    #数据库索引
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        #最大连接数
+        max-active: 100
+        #最大阻塞等待时间(负数表示没限制)
+        max-wait: 2000
+        #最大空闲
+        max-idle: 500
+        #最小空闲
+        min-idle: 8
+    #连接超时时间
+    timeout: 5000
+
 
 #mybatis-plush配置
 mybatis-plus:
